--- a/Client/package.json
+++ b/Client/package.json
@@ -12,7 +12,9 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/"
   },
-  "dependencies": {
+  "dependencies": {    
+    "bulma": "^1.0.2",
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
